--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     content="Проект для абсолютно анонимного выражения своих мыслей, эмоций, впечатлений, даже коротких моментов. Жду тебя!" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Вырази свои эмоци | КТ</title>
+  <title>Вырази свои эмоции | КТ</title>
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
