--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#504F75" />
@@ -10,7 +10,7 @@
     content="Проект для абсолютно анонимного выражения своих мыслей, эмоций, впечатлений, даже коротких моментов. Жду тебя!" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Вырази свои эмоции | КТ</title>
+  <title>Вырази свои эмоции здесь | КТ</title>
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
@@ -31,6 +31,11 @@
     <div><img src="https://mc.yandex.ru/watch/96057626" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
   <!-- /Yandex.Metrika counter -->
+  <script>
+    console.log(`Если ты зашел в код элемента, значит ты разработчик или любопытный?)
+    Написал проект Я - https://t.me/atom_baytovich
+    Писал с душой... Если есть замечания, то обратись ко мне. Я стараюсь совершенствоваться в навыках`)
+  </script>
 </head>
 
 <body>
